add: associacao nutri e paciente