@@ -5,46 +5,50 @@ import fitt_nutri.example.demo.dto.response.PatientResponseDTO;
 import fitt_nutri.example.demo.model.PatientModel;
 import fitt_nutri.example.demo.service.PatientService;
 import lombok.RequiredArgsConstructor;
-import org.springframework.stereotype.Service;
+import org.springframework.stereotype.Component;
 
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
-@Service
+@Component
 @RequiredArgsConstructor
 public class PatientAdapter {
 
     private final PatientService service;
 
     public PatientResponseDTO create(PatientRequestDTO dto) {
-        return toDTO(service.create(dto));
+        PatientModel p = service.create(dto);
+        return mapToDTO(p);
     }
 
     public List<PatientResponseDTO> getAll() {
-        return service.findAll().stream()
-                .map(this::toDTO)
-                .toList();
+        List<PatientModel> patients = service.findAllByNutricionista();
+        return patients.stream()
+                .map(this::mapToDTO)
+                .collect(Collectors.toList());
     }
 
     public PatientResponseDTO getById(Integer id) {
-        return toDTO(service.findById(id));
+        PatientModel p = service.findByIdAndNutricionista(id);
+        return mapToDTO(p);
     }
 
     public PatientResponseDTO update(Integer id, PatientRequestDTO dto) {
-        return toDTO(service.update(id, dto));
+        PatientModel p = service.update(id, dto);
+        return mapToDTO(p);
+    }
+
+    public PatientResponseDTO patch(Integer id, Map<String, Object> updates) {
+        PatientModel p = service.patchPatient(id, updates);
+        return mapToDTO(p);
     }
 
     public void delete(Integer id) {
         service.delete(id);
     }
 
-    public PatientResponseDTO patch(Integer id, Map<String, Object> updates) {
-        PatientModel updated = service.patchPatient(id, updates);
-        return toDTO(updated);
-    }
-
-
-    private PatientResponseDTO toDTO(PatientModel p) {
+    private PatientResponseDTO mapToDTO(PatientModel p) {
         return new PatientResponseDTO(
                 p.getId(),
                 p.getNome(),
@@ -55,7 +59,8 @@ public class PatientAdapter {
                 p.getCidade(),
                 p.getSexo(),
                 p.getEtnia(),
-                p.getAtividade()
+                p.getAtividade(),
+                p.getNutricionista().getId()  // retorna o id do nutricionista associado
         );
     }
 }
